--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-spring.application.name=Api-Produtos
+spring.datasource.url=jdbc:postgresql://localhost:5432/produto-api
+spring.datasource.username=postgres
+spring.datasource.password=root
